Created about page and set text color function

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -29,6 +29,15 @@ $background-opacity: 0.9;
     }
 }
 
+// Set text color
+@function set-text-color($color) {
+    @if (lightness($color) > 40) {
+        @return #000;
+    } @else {
+        @return #fff;
+    }
+}
+
 // Media Query mixins
 
 @mixin mediaSm {
