--- a/scss/main.scss
+++ b/scss/main.scss
@@ -48,7 +48,7 @@ header {
 
 main {
   padding: 4rem;
-  min-height: calc(100vh-60px);
+  min-height: calc(100vh - 60px);
 
   .icons {
     margin-top: 1rem;
@@ -74,8 +74,8 @@ main {
   display: grid;
   grid-gap: 30px;
   grid-template-areas:
-  'bioimage bio bio'
-  'job1 job2 job3';
+    "bioimage bio bio"
+    "job1 job2 job3";
   grid-template-columns: repeat(3, 1fr);
 }
 
@@ -100,24 +100,23 @@ main {
   grid-area: job3;
 }
 
-.job{
+.job {
   background: lighten($primary-color, 5);
   padding: 0.5rem;
   border-bottom: $secondary-color 5px solid;
 }
 
-// Work/ Projects 
+// Work/ Projects
 .projects {
   display: grid;
   grid-gap: 0.7rem;
   grid-template-columns: repeat(3, 1fr);
 
-
   img {
     width: 100%;
     border: 3px #fff solid;
 
-    &:hover{
+    &:hover {
       opacity: 0.5;
       border-color: $secondary-color;
       @include easeOut;
@@ -138,13 +137,41 @@ main {
   }
 }
 
-.btn-dark{
+// Contact page
+.boxes {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin-top: 1rem;
+
+  div {
+    font-size: 2rem;
+    border: 3px solid #fff;
+    padding: 1.5rem 2.5rem;
+    margin-bottom: 3rem;
+    @include easeOut;
+
+    &:hover {
+      padding: 0.5rem 1.5rem;
+      background: $secondary-color;
+      color: set-text-color($secondary-color);
+
+      span {
+        color: set-text-color($secondary-color);
+      }
+    }
+  }
+}
+
+// Button styles
+.btn-dark {
   @extend .btn;
   background: darken($primary-color, 50);
   color: #fff;
 }
 
-.btn-light{
+.btn-light {
   @extend .btn;
   background: lighten($primary-color, 50);
   color: #333;
