Added project information and images to the work page. Created individual project pages. Made contact means links

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -63,3 +63,9 @@ $background-opacity: 0.9;
         @content;
     }
 }
+
+@mixin projectLayout {
+    display: grid;
+    grid-gap: 0.7rem;
+    grid-template-columns: repeat(3, 1fr);
+}
