--- a/scss/main.scss
+++ b/scss/main.scss
@@ -105,9 +105,7 @@ main {
 
 // Work/ Projects
 .projects {
-  display: grid;
-  grid-gap: 0.7rem;
-  grid-template-columns: repeat(3, 1fr);
+  @include projectLayout;
 
   img {
     width: 100%;
@@ -119,6 +117,30 @@ main {
       @include easeOut;
     }
   }
+} 
+
+.project-gallery {
+  @include projectLayout;
+  grid-template-columns: repeat(2, 1fr) !important;
+
+  img {
+    width: 100%;
+    border: 3px #fff solid;
+  }
+}
+
+.project-description {
+  @include projectLayout;
+  grid-template-columns: repeat(1, 1fr) !important;
+  padding: 0rem 2rem 2rem 2rem;
+}
+
+// Extra information side
+.extra-info {
+  padding: 0.5rem;
+  width: 100%;
+  text-align: center;
+  background-color: lighten($primary-color, 2);
 }
 
 // Button Styles
@@ -162,6 +184,17 @@ main {
 }
 
 // Button styles
+.return-btn {
+  background: darken($primary-color, 50);
+  color: #fff;
+  padding: 0.2rem 0.3rem;
+  margin-right: 0.5rem;
+  &:hover {
+    background: $secondary-color;
+    color: set-text-color($secondary-color);
+  }
+}
+
 .btn-dark {
   @extend .btn;
   background: darken($primary-color, 50);
