Fixed homepage and contact page responsiveness issues. Readded surname to homepage. Added media query to for lanscape smartphone.

--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -46,6 +46,12 @@ $background-opacity: 0.9;
     }
 }
 
+@mixin mediaSmLandscape {
+    @media screen and (max-width: 815px) and (max-height: 420px){
+        @content;
+    }
+}
+
 @mixin mediaMd {
     @media screen and (max-width: 768px) {
         @content;
